--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
     "react-cookie": "^4.1.1",
     "react-router-dom": "^6.14.1",
     "uuid": "^9.0.0"
