--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.4",
     "cross-fetch": "^3.1.6",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "mammoth": "^1.6.0",
     "papaparse": "^5.4.1",
